# vinted-prometheus-client-mmap

./: .gitignore  CHANGELOG.md  Cargo.toml  Gemfile  README.md  Rakefile  example.rb  known-leaks-suppression.txt  prometheus-client-mmap.gemspec
.github/workflows/: build_release_pipeline.yaml   build_release_pipeline.yml  test.yml
ext/fast_mmaped_file_rs/: Cargo.toml  README.md  build.rs  extconf.rb
ext/fast_mmaped_file_rs/src/: error.rs  exemplars.rs  file_entry.rs  file_info.rs  lib.rs  macros.rs  map.rs  mmap.rs  raw_entry.rs  testhelper.rs  util.rs
ext/fast_mmaped_file_rs/src/mmap/: inner.rs
fuzz/prometheus/client/helpers/: fuzz_mmaped_file.rb
lib/: prometheus.rb
lib/prometheus/: client.rb
lib/prometheus/client/: configuration.rb  counter.rb  gauge.rb  histogram.rb  label_set_validator.rb  metric.rb  mmaped_dict.rb  mmaped_value.rb  page_size.rb  push.rb  registry.rb  simple_value.rb  summary.rb  uses_value_type.rb  version.rb
lib/prometheus/client/formats/: protobuf.rb  text.rb
lib/prometheus/client/helper/: entry_parser.rb  file_locker.rb  json_parser.rb  metrics_processing.rb  metrics_representation.rb  mmaped_file.rb  plain_file.rb
lib/prometheus/client/rack/: collector.rb  exporter.rb
lib/prometheus/client/support/: puma.rb  unicorn.rb
spec/: sample_metrics.rb  spec_helper.rb  temp_metrics_dir.rb
spec/prometheus/: client_spec.rb
spec/prometheus/client/: counter_spec.rb  gauge_spec.rb  histogram_spec.rb  label_set_validator_spec.rb  mmaped_dict_spec.rb  mmaped_value_spec.rb  push_spec.rb  summary_spec.rb
tasks/: benchmark.rake
(+7 files in other folders)
